[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "tinympc-sam-schoedel"
version = "0.0.14"
authors = [
  { name="Khai Nguyen", email="khai.nx1201@gmail.com" },
  { name="Sam Schoedel", email="seschoedel@gmail.com" },
]
description = "Python wrapper for TinyMPC"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.7",
  "setuptools"
]

[project.urls]
Homepage = "https://tinympc.org"

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py39']